# CrescendoEngine

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  Surf_Map_1.json  attenuationtest.json  build_assets.lua  dev.sh  shadowtestmap.json  web.sh
assets/models/: TotalShift_Dolly(Rigged).mtl  crescendo_sigil.mtl  terrain_4x4.mtl  test_level1.mtl  world_garage.mtl
assets/models/Crescenduck/: CRESCENDUCK.gltf
assets/models/Test_Map/: updatedworld.gltf
assets/models/car/: Chassis.glb  Wheels.glb  cartest.gltf
assets/scripts/: car_physics.lua  duck.lua  gt_car.lua  rotator.lua
assets/shaders/: bake.frag  bake.vert  billboard.frag  billboard.vert  bloom_bright.frag  bloom_composite.frag  equirect2cube.comp  fullscreen_vert.vert  grid.frag  opaque.frag  shader.frag  shader.vert  shadow.vert  sky.frag  sky.vert  ssao.frag  ssr.frag  transparent.frag  water.frag  water.vert
assets/systemsymbols/: playerspawner.glb
assets/textures/: cliff_13_moss3.tga  grass.tga
modules/gltf/: AssetLoader.cpp  AssetLoader.hpp
modules/image/: ImageLoader.cpp  ImageLoader.hpp
modules/ktx/: KtxLoader.cpp  KtxLoader.hpp
modules/terrain/: MarchingCubesTables.cpp  MarchingCubesTables.hpp  OctreeNode.cpp  OctreeNode.hpp  TerrainManager.hpp  VoxelGenerator.cpp  VoxelGenerator.hpp
servers/camera/: Camera.hpp
servers/display/: DisplayServer.cpp
servers/physics/: PhysicsServer.hpp
servers/rendering/: Material.hpp  RenderingServer.cpp  RenderingServer.hpp  Vertex.hpp  VulkanContext.hpp
src/: main.cpp
src/IO/: ConfigManager.cpp  ConfigManager.hpp  SceneManager.cpp  SceneManager.hpp  SceneSerializer.cpp  SceneSerializer.hpp  Serializer.cpp  Serializer.hpp  VFSFormat.hpp  VirtualFileSystem.cpp  VirtualFileSystem.hpp
src/controllers/: FPSController.cpp  FPSController.hpp  VehicleController.cpp  VehicleController.hpp
src/core/: Engine.cpp  Engine.hpp  EngineState.hpp  Input.cpp  Input.hpp  ScriptSystem.hpp
src/entities/: GridEntity.hpp
src/scene/: BaseEntity.hpp  CarController.hpp  Component.hpp  GameObject.hpp  GameWorld.hpp  Scene.hpp  World.hpp
src/scene/components/: MeshRendererComponent.hpp  NetworkSyncComponent.hpp  PlanetManagerComponent.hpp  PointLightComponent.hpp  ProceduralPlanetComponent.hpp  TransformComponent.hpp
src/servers/animation/: animation.hpp
src/servers/audio/: AudioServer.cpp  AudioServer.hpp
src/servers/camera/: Camera.hpp
src/servers/display/: DisplayServer.cpp  DisplayServer.hpp
src/servers/interface/: EditorUI.cpp  EditorUI.hpp  SymbolServer.cpp  SymbolServer.hpp
src/servers/networking/: NetworkingServer.cpp  NetworkingServer.hpp
src/servers/physics/: PhysicsServer.hpp
src/servers/rendering/: IRenderer.hpp  Material.hpp  RenderTypes.hpp  RenderingServer.cpp  RenderingServer.hpp  Vertex.hpp  VulkanResources.hpp  WebRenderer.cpp  WebRenderer.hpp
src/servers/rendering/Webgpu/: WebGPURenderer.cpp  WebGPURenderer.hpp
src/servers/rendering/vulkan/: VulkanContext.hpp  VulkanResources.hpp  VulkanUtils.hpp
src/tools/: CrescendoPacker.cpp
